@@ -1,25 +1,24 @@
 package com.zhaopx.ai.service.impl;
 
+import com.zhaopx.ai.bean.req.KnowledgeAnswerRequest;
+import com.zhaopx.ai.bean.req.KnowledgeSearchRequest;
+import com.zhaopx.ai.bean.res.KnowledgeSearchHit;
+import com.zhaopx.ai.bean.res.KnowledgeSearchResponse;
 import com.zhaopx.ai.service.AnswerService;
+import com.zhaopx.ai.service.KnowledgeSearchService;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.ai.chat.client.ChatClient;
-import org.springframework.ai.document.Document;
-import org.springframework.ai.vectorstore.SearchRequest;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Schedulers;
-
-import org.springframework.ai.vectorstore.VectorStore;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.core.scheduler.Schedulers;
 
-/**
- * @Description
- * @Author: ZhaoPengXiang
- * @Date: 2026-03-26 14:38
- */
+import java.util.List;
+
 @Slf4j
 @Service
 public class AnswerServiceImpl implements AnswerService {
@@ -28,29 +27,52 @@ public class AnswerServiceImpl implements AnswerService {
     private ChatClient chatClient;
 
     @Autowired
-    private VectorStore vectorStore;
+    private KnowledgeSearchService knowledgeSearchService;
 
-    // 向量检索返回前端/LLM 使用的命中文本条数
     @Value("${answer.top-k:5}")
     private int topK;
 
     @Override
     public Flux<String> myQuestion(String question) {
-        if (question == null || question.isBlank()) {
+        if (StringUtils.isBlank(question)) {
             return Flux.error(new IllegalArgumentException("question 不能为空"));
         }
+        KnowledgeAnswerRequest request = new KnowledgeAnswerRequest();
+        request.setQuestion(question.trim());
+        request.setTopK(topK);
+        return doAsk(request, false);
+    }
 
-        int effectiveTopK = Math.max(1, topK);
-        SearchRequest searchRequest = SearchRequest.builder()
-                .query(question)
-                .topK(effectiveTopK)
-                .build();
+    @Override
+    public Flux<String> ask(KnowledgeAnswerRequest request) {
+        if (request == null || StringUtils.isBlank(request.getQuestion())) {
+            return Flux.error(new IllegalArgumentException("question 不能为空"));
+        }
+        if (request.getSystemCodes() == null || request.getSystemCodes().isEmpty()) {
+            return Flux.error(new IllegalArgumentException("systemCodes 不能为空"));
+        }
+        return doAsk(request, true);
+    }
 
-        // similaritySearch 是阻塞式调用，放到 boundedElastic 线程池避免阻塞 Netty 线程
-        return Mono.fromCallable(() -> vectorStore.similaritySearch(searchRequest))
+    private Flux<String> doAsk(KnowledgeAnswerRequest request, boolean enforcePermission) {
+        int effectiveTopK = Math.max(1, request.getTopK() == null ? topK : request.getTopK());
+
+        return Mono.fromCallable(() -> {
+                    KnowledgeSearchRequest searchRequest = new KnowledgeSearchRequest();
+                    searchRequest.setQuery(request.getQuestion().trim());
+                    searchRequest.setTopK(effectiveTopK);
+                    searchRequest.setNumCandidates(request.getNumCandidates());
+                    searchRequest.setKnowledgeBaseId(request.getKnowledgeBaseId());
+                    if (enforcePermission) {
+                        searchRequest.setSystemCodes(request.getSystemCodes());
+                    } else {
+                        searchRequest.setSystemCodes(List.of("default"));
+                    }
+                    return knowledgeSearchService.search(searchRequest);
+                })
                 .subscribeOn(Schedulers.boundedElastic())
-                .flatMapMany(docs -> {
-                    String prompt = buildPrompt(question, docs);
+                .flatMapMany(searchResponse -> {
+                    String prompt = buildPrompt(request.getQuestion(), searchResponse);
                     log.info("RAG prompt length={}", prompt.length());
                     return chatClient.prompt()
                             .user(prompt)
@@ -69,34 +91,32 @@ public class AnswerServiceImpl implements AnswerService {
                         + (e.getMessage() == null ? "" : e.getMessage())));
     }
 
-    private String buildPrompt(String question, java.util.List<Document> docs) {
+    private String buildPrompt(String question, KnowledgeSearchResponse searchResponse) {
         StringBuilder context = new StringBuilder();
-        if (docs != null) {
-            for (int i = 0; i < docs.size(); i++) {
-                Document d = docs.get(i);
-                if (d == null || d.getText() == null) {
+        List<KnowledgeSearchHit> hits = searchResponse == null ? null : searchResponse.getHits();
+        if (hits != null) {
+            for (int i = 0; i < hits.size(); i++) {
+                KnowledgeSearchHit hit = hits.get(i);
+                if (hit == null || StringUtils.isBlank(hit.getContent())) {
                     continue;
                 }
-                String text = d.getText().trim();
-                if (text.isEmpty()) {
-                    continue;
-                }
-                // 避免单条 chunk 过长把上下文撑爆
-                int maxPerDocChars = 2000;
-                if (text.length() > maxPerDocChars) {
-                    text = text.substring(0, maxPerDocChars);
+                String text = hit.getContent().trim();
+                if (text.length() > 2000) {
+                    text = text.substring(0, 2000);
                 }
                 context.append("[参考资料 ").append(i + 1).append("]\n")
-                        .append(text).append("\n\n");
-                // 控制总上下文长度（经验值，可按需调大/调小）
-                int maxContextChars = 8000;
-                if (context.length() >= maxContextChars) {
+                        .append("systemCode=").append(StringUtils.defaultString(hit.getSystemCode(), "unknown"))
+                        .append(", documentName=").append(StringUtils.defaultString(hit.getDocumentName(), "unknown"))
+                        .append(", score=").append(hit.getScore() == null ? "null" : hit.getScore())
+                        .append("\n")
+                        .append(text)
+                        .append("\n\n");
+                if (context.length() >= 8000) {
                     break;
                 }
             }
         }
 
-        // 若没召回到内容，也要给模型一个兜底指令
         if (context.length() == 0) {
             context.append("（未检索到相关参考资料）");
         }
